# Daiger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md
benchmark/: common.cpp  common.h  concomp.cpp  katz.cpp  makefile  markov.cpp  pagerank.cpp  sssp.cpp  sswp.cpp
run-script/: go-cc.sh  test-basic.sh
spark/: cc.py  common.py  mc.py  pagerank.py  pagerank_incr.py  pick.sh  sssp.py  sssp_incr.py  sswp.py
src/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  MAITER.sln  ZERO_CHECK.vcxproj.filters
src/client/: client.h
src/dbg/: CMakeLists.txt  dbg.vcxproj.filters  getcallstack.h  stream_cont.hpp
src/driver/: CMakeLists.txt  Dispatcher.hpp  MsgDriver.cc  driver.vcxproj.filters
src/examples/: CMakeLists.txt  beliefpropa.cc  example.vcxproj.filters  examples.h  gengraph.cc  main.cc  maiter.vcxproj.filters  shortestpath.cc
src/kernel/: CMakeLists.txt  DSMKernel.cc  DSMKernel.h  kernel.cc  kernel.h  kernel.vcxproj.filters  maiter-kernel.h
src/master/: CMakeLists.txt  master.cc  master.h  master.vcxproj.filters  master2.cc  master_checkpoint.cc  master_handler.cc  master_tf.hpp  run-descriptor.cc  run-descriptor.h  worker-handle.cc  worker-handle.h
src/msg/: CMakeLists.txt  msg.vcxproj.filters
src/net/: CMakeLists.txt  NetworkImplMPI.cc  NetworkImplMPI.h  NetworkThread.cc  NetworkThread.h  Task.cc  net.vcxproj.filters
src/table/: CMakeLists.txt  TableDescriptor.cc  TableDescriptor.h  TableHelper.h  deltatable.h  global-table.cc  global-table.h  local-table.cc  local-table.h  statetable.h  table-coder.h  table-create.h  table-interfaces.h  table-registry.cc  table-registry.h  table.h  table.vcxproj.filters  table_iterator.h  typed-global-table.hpp
src/table/tbl_widget/: IterateKernel.h  sharder.h  sharder_impl.hpp  term_checker.h  term_checker_impl.hpp  trigger.h
src/util/: CMakeLists.txt  common.cc  common.h  common.vcxproj.filters  file.h  hash.h  noncopyable.h  static-initializers.cc  static-initializers.h  stringpiece.cc  stringpiece.h  timer.cc  timer.h  tuple.h
src/worker/: CMakeLists.txt  worker.cc  worker.vcxproj.filters  worker_checkpoint.cc  worker_handler.cc
src2/: CMakeFiles.txt  CMakeLists.txt  CMakeSettings.json  NodeParent.h  OperationKernel.h  def.h
src2/api/: CMakeLists.txt  api.cpp  api.h
src2/application/: AppBase.cpp  AppBase.h  AppKernel.h  ApplicationFactory.cpp  ApplicationFactory.h  ArgumentSeparator.h  CMakeLists.txt  FactoryProductTemplate.h  IOHandler.cpp  IOHandler.h  IOHandler_Helper.cpp  IOHandler_Helper.h  Operation.h  Partitioner.cpp  Partitioner.h  Prioritizer.h  ProgressReport.h  Progressor.h  ProgressorReport.h  Scheduler.cpp  Scheduler.h  Sharder.cpp  Sharder.h  Terminator.cpp  Terminator.h  cc.cpp
src2/common/: CMakeLists.txt  ConfData.h  Kernel.h  Node.cpp  Node.h  NodeBasic.cpp  NodeBasic.h  def.h  def_func.cpp  def_func.h  io.cpp  io.h
src2/dbg/: CMakeLists.txt  dbg.h  getcallstack.cpp  stream_cont.hpp
src2/driver/: CMakeLists.txt  MsgDriver.cpp  MsgDriver.h
src2/driver/tools/: SyncUnit.cpp  SyncUnit.h
src2/example/: CMakeLists.txt  adsorption.cpp  adsorption.h  cc.cpp  cc.h  example_reg.cpp  example_reg.h  jacobi.cpp  jacobi.h  katz.cpp  katz.h  mc.cpp  mc.h  pr.cpp  pr.h  sssp.cpp  sssp.h  sswp.cpp  sswp.h
src2/factory/: AppKernelFactory.cpp  AppKernelFactory.h  ArgumentSeparatorFactory.cpp  ArgumentSeparatorFactory.h  CMakeLists.txt  FactoryProductTemplate.cpp  FactoryTemplate.h  IOHandlerFactory.cpp  IOHandlerFactory.h  OperationFactory.cpp  OperationFactory.h  PartitionerFactory.cpp  PartitionerFactory.h  PrioritizerFactory.cpp  PrioritizerFactory.h  ProgressorFactory.cpp  ProgressorFactory.h  SchedulerFacrory.cpp  SchedulerFactory.h  SharderFactory.cpp  SharderFactory.h  TerminatorFactory.cpp  TerminatorFactory.h  factory_reg.cpp  factory_reg.h
src2/holder/: CMakeLists.txt  GlobalHolder.cpp  GlobalHolder.h  GlobalHolder.hpp  GlobalHolderBase.h  GlobalHolderImpl.hpp  GraphContainer.cpp  GraphContainer.h  LocalHolder.hpp  LocalUpdater.hpp  RemoteHolder.hpp  RemoteUpdater.hpp
src2/logging/: CMakeLists.txt  logger.cpp  logger.h  logging.cpp  logging.h
src2/main/: CMakeLists.txt  main.cpp
src2/master/: CMakeLists.txt
src2/msg/: CMakeLists.txt  MType.h  messages.cpp  messages.h  mtype.proto
src2/network/: CMakeLists.txt  NetworkImplMPI.cc  NetworkImplMPI.h  NetworkThread.cpp  NetworkThread.h  RPCInfo.h  Task.h
src2/runner/: CMakeLists.txt  IdTranslate.cpp  Master.cpp  Master.h  Master_handler.cpp  Option.cpp  Option.h  Runner.cpp  Runner.h  WorkFlow.md  Worker.cpp  Worker.h  Worker_handler.cpp  main.cpp  runner_helpers.cpp  runner_helpers.h
src2/serial/: CMakeLists.txt  serialization.h  serializer_basic.hpp  tuple3_ps.h
src2/type_traits/: CMakeLists.txt
src2/util/: CMakeLists.txt  FileEnumerator.cpp  FileEnumerator.h  Timer.cpp  Timer.h  Util.cpp  Util.h
src2/util2/: CMakeLists.txt  common.cc  file.cc  marshal.hpp  marshalled_map.hpp  timer.cc  timer.h
support-script/: common.py  draw-log.py  draw.py  make-invertible.py  normalize-pagerank.py
