set(HEADERS
	AppBase.h
	AppKernel.h
	ArgumentSeparator.h
	IOHandler.h
	IOHandler_Helper.h
	Scheduler.h
	Partitioner.h
	Progressor.h
	ProgressReport.h
	Terminator.h
)
set(SOURCES
	AppBase.cpp
	IOHandler_Helper.cpp
	Scheduler.cpp
	Partitioner.cpp
	Terminator.cpp
)
add_library(application
	${HEADERS} ${SOURCES})
