set(HEADERS
	FactoryTemplate.h
	AppKernelFactory.h
	ArgumentSeparatorFactory.h
	IOHandlerFactory.h
	SchedulerFactory.h
	PartitionerFactory.h
	ProgressorFactory.h
	TerminatorFactory.h
	PrioritizerFactory.h
	factory_reg.h
)
set(SOURCES
	AppKernelFactory.cpp
	ArgumentSeparatorFactory.cpp
	IOHandlerFactory.cpp
	SchedulerFacrory.cpp
	PartitionerFactory.cpp
	ProgressorFactory.cpp
	TerminatorFactory.cpp
	PrioritizerFactory.cpp
	factory_reg.cpp
)
add_library(factory
	${HEADERS} ${SOURCES})
